	PR fortran/40206 	* trans-stmt.c (gfc_trans_character_select): Always use NULL for high 	in CASE_LABEL_EXPR and use NULL for low for the default case.

* gfortran.dg/select_char_3.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@162209 138bc75d-0d04-0410-961f-82ee72b054a4